👔 Update destination integration 🗑️ Clean unused resources

--- a/samples/segment-destination-example/src/main/res/layout/activity_custom_event.xml
+++ b/samples/segment-destination-example/src/main/res/layout/activity_custom_event.xml
@@ -9,9 +9,9 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="@string/track_event"
         android:textColor="@color/mine_shaft"
+        android:layout_marginTop="@dimen/top_content_margin"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +127,7 @@
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="@dimen/bottom_content_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:text="@string/track_event"
