--- a/samples/segment-destination-example/src/main/res/layout/activity_screen_two.xml
+++ b/samples/segment-destination-example/src/main/res/layout/activity_screen_two.xml
@@ -9,27 +9,27 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
         android:background="?attr/actionBarItemBackground"
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_back"
         android:tint="@color/mine_shaft"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/tvTitle" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/screen_two"
+        android:layout_marginTop="@dimen/top_content_margin"
+        android:text="@string/screen_one"
         android:textColor="@color/mine_shaft"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ivBack" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/flBoxOne"
