--- a/samples/segment-destination-example/src/main/res/layout/activity_deeplink.xml
+++ b/samples/segment-destination-example/src/main/res/layout/activity_deeplink.xml
@@ -8,7 +8,7 @@
         android:id="@+id/ivBack"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/top_content_margin"
         android:layout_marginTop="24dp"
         android:background="?attr/actionBarItemBackground"
         android:clickable="true"
