--- a/samples/segment-destination-example/src/main/res/layout/activity_main.xml
+++ b/samples/segment-destination-example/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/ivLogo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/top_content_margin"
         android:src="@drawable/ic_user_pilot_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@dimen/bottom_content_margin"
         android:textColor="@color/gray"
         android:text="@string/copyright_userpilot"
         app:layout_constraintBottom_toBottomOf="parent"
