--- a/samples/segment-destination-example/src/main/res/layout/activity_screen_two.xml
+++ b/samples/segment-destination-example/src/main/res/layout/activity_screen_two.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/top_content_margin"
-        android:text="@string/screen_one"
+        android:text="@string/screen_two"
         android:textColor="@color/mine_shaft"
         android:textSize="20sp"
         android:textStyle="bold"
